--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,3 +1,11 @@
 PORT=8000
 MONGO_DB_CONNECTION=mongodb+srv://your-name:your-pass@cluster0.ruowjfl.mongodb.net/
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=your-secret
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=your-secret
+ACCESS_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
